--- a/app/templates/new_review.html
+++ b/app/templates/new_review.html
@@ -10,6 +10,10 @@
     <div class="col-md-4">
         {{ wtf.quick_form(review_form) }}
     </div>
+    <div class="col-md-4">
+        {{ wtf.quick_form(review_form) }}
+        {{simplemde.load}}
+    </div>
 </div>
 
 {% endblock %}
